test docker ingest action

--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -26,3 +26,5 @@ jobs:
           fetch-depth: 0
       - name: ingest
         uses: docker://moderne/ingest:latest
+        with:
+          args: --style-name spring
