--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -26,5 +26,7 @@ jobs:
           fetch-depth: 0
       - name: ingest
         uses: docker://moderne/ingest:latest
+        env:
+          MODERNE_API_ACCESS_TOKEN: ${{ secrets.MODERNE_API_ACCESS_TOKEN }}
         with:
           args: --style-name spring
