--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -25,7 +25,7 @@ jobs:
         with:
           fetch-depth: 0
       - name: ingest
-        uses: docker://moderne/ingest:latest
+        uses: docker://moderne/ingest:java11-latest
         env:
           MODERNE_API_ACCESS_TOKEN: ${{ secrets.MODERNE_API_ACCESS_TOKEN }}
         with:
