test docker ingest action

--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -29,4 +29,4 @@ jobs:
         env:
           MODERNE_API_ACCESS_TOKEN: ${{ secrets.MODERNE_API_ACCESS_TOKEN }}
         with:
-          args: --style-name spring
+          args: --style-name org.openrewrite.java.SpringFormat
